# text-editor

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: args.rs  buffer.rs  bytes.rs  main.rs  mode.rs  tramp.rs
src/editor/: actions.rs  keymap.rs  mod.rs  popup.rs  theme.rs  view.rs
