[package]
name = "text-editor"
version = "0.1.0"
edition = "2021"
description = "a cli text editor"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
clap = { version = "4.5.23", features = ["derive"] }
ropey = "1.6.1"
arc-swap = "1.7.1"
eyre = "0.6.12"
color-eyre = "0.6.3"
rexpect = "0.6.0"
tempfile = "3.18.0"
base64 = "0.22.1"
