[package]
name = "text-editor"
version = "0.2.0"
edition = "2021"
description = "a cli text editor"

[dependencies]
arc-swap = "1.7.1"
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
eyre = "0.6.12"
ratatui = "0.29.0"
rexpect = "0.6.0"
ropey = "1.6.1"
tempfile = "3.18.0"
# unicode-segmentation = "1.12.0"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

tree-sitter = "0.25.4"
tree-sitter-rust = "0.23"
