[package]
name = "text-editor"
version = "0.2.0"
edition = "2021"
description = "a cli text editor"

[dependencies]
arc-swap = "1.7.1"
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
eyre = "0.6.12"
ratatui = "0.29.0"
rexpect = "0.6.0"
ropey = "1.6.1"
# rand = "0.9.1"
# unicode-segmentation = "1.12.0"
flate2 = "1.1.1"
fastnbt = { git = "https://github.com/xor-bits/fastnbt" }
fastsnbt = { git = "https://github.com/xor-bits/fastnbt" }
# serde_json = "1.0.140"
ron = "0.10.1"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

tree-sitter = "0.25.4"
tree-sitter-rust = "0.23"
tree-sitter-zig = "1.1.2"
tree-sitter-c = "0.23.4"
